kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c2c-marketplace-ingress
  namespace: c2c-marketplace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: c2c-marketplace.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
    - host: pgadmin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
